--- a/src/Media-Query.css
+++ b/src/Media-Query.css
@@ -1,14 +1,13 @@
 @import url(common.css);
 
-@media screen and (max-width: 1348px) {
-}
-
 /* Laptopn screen  */
+@media screen and (max-width: 1025px) {
+  .case-studies .isotop-part .grid-item {
+    width: 32%;
+    height: 320px;
+  }
+}
 
-@media only screen and (max-width: 1366px) and (min-width: 992px) {
-}
-@media screen and (max-width: 992px) {
-}
 @media screen and (max-width: 768px) {
   .navbar .container {
     flex-direction: row-reverse;
@@ -53,11 +52,18 @@
   .platform_expert .service-provide {
     grid-template-columns: auto;
   }
+  .case-studies .isotop-part {
+    margin-bottom: 100px;
+  }
   .case-studies .isotop-part .menu_iso {
     flex-wrap: wrap;
   }
   .case-studies .isotop-part .menu_iso li a {
     border-radius: 2px;
+  }
+  .case-studies .isotop-part .grid-item {
+    width: 47%;
+    height: 320px;
   }
   .about_gellary .service-provide {
     grid-template-columns: repeat(2, auto);
@@ -218,6 +224,10 @@
     -moz-transform: translateX(90px);
     -ms-transform: translateX(90px);
     -o-transform: translateX(90px);
+  }
+  .case-studies .isotop-part .grid-item {
+    width: 100%;
+    height: 380px;
   }
 }
 @media screen and (max-width: 425px) {
