--- a/src/Media-Query.css
+++ b/src/Media-Query.css
@@ -228,6 +228,8 @@
   .case-studies .isotop-part .grid-item {
     width: 100%;
     height: 380px;
+    padding: 0;
+    margin: 0;
   }
 }
 @media screen and (max-width: 425px) {
